objects/OF_STAGING_PBE__c.object
<CustomObject>
    <fields>
        <fullName>ERROR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERROR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Asset__c</fullName>
        <label>Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CommercialElementIstanziato__c</fullName>
        <label>Commercial element istanziato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DataAttivazione2__c</fullName>
        <label>Data attivazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataCessazione2__c</fullName>
        <label>Data cessazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Order__c</fullName>
        <label>Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <label>Pricebook2Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <label>Product2Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UseStandardPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Standard Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tipoApparato__c</fullName>
        <label>tipoApparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OF STAGING PBE</label>
    <nameField>
        <label>OF STAGING PBE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OF STAGING PBE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>